# unit-test-cmake-template-use-hfc-autotools

./: CMakeLists.txt  print_hello_tipi.cxx  print_hello_tipi.h
